elimine algo del enlace

--- a/index.html
+++ b/index.html
@@ -598,9 +598,8 @@
                   <ul class="list-unstyled">
                       <li><a href="#">HTML</a></li>
                       <li><a href="#">CSS</a></li>
+                      <li><a href="#">Bootstrap</a></li>
                       <li><a href="#">JAVASCRIPT</a></li>
-                      <li><a href="#">MYSQL</a></li>
-                      <li><a href="#">PHP</a></li>
                   </ul>
               </div>
               <div class="col-lg-4 col-md-6">
