modifique cambios en footer enlaces

--- a/index.html
+++ b/index.html
@@ -599,6 +599,7 @@
                       <li><a href="#">HTML</a></li>
                       <li><a href="#">CSS</a></li>
                       <li><a href="#">Bootstrap</a></li>
+                      <li><a href="#">Sass</a></li>
                       <li><a href="#">JAVASCRIPT</a></li>
                   </ul>
               </div>
