se cambio la estructura de html y añadi clases html

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                   <a class="nav-link disabled">Disabled</a>
                 </li>
               </ul>
-              <form class="d-flex">
+              <form class="d-flex form-nav">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class="search btn btn-success" type="submit">Search</button>
               </form>
             </div>
           </div>
@@ -102,7 +102,7 @@
           </div>
         </div>
 
-
+        <div class="container">
         <div class="row section2">
 
           <div class="col-12 col-md-6">
@@ -152,7 +152,7 @@
             </div>
           </section>
         </div>
-
+      </div>
 
 
         <div class="row section3">
@@ -341,10 +341,12 @@
           </div>
         </div>
 
+        <div class="container-fluid">
         <div class="row contenedor-sec4">
-          <section class="section4 col-12">
+
+          <section class="section4 container">
             <div class="row">
-              <div class="col-12 col-md-6">
+              <div class="col-12 col-md-6 imagen-sec4">
                 <figure class="choose-us">
                   <img class="img-fluid" src="assets/img/ch1.webp" alt="experiencia del equipo">
                 </figure>
@@ -366,12 +368,12 @@
                   </p>
                 </article>
 
-                <div class="row contenedor-producto">
-                  <div class="icono col-2">
+                <div class="sec4-flex">
+                  <div class="icono me-3">
                     <i class="fa-solid fa-file-circle-check"></i>
                   </div>
 
-                  <article class="col-10 contenido-producto">
+                  <article>
                     <header>
                       <h3>
                         Product Designs
@@ -380,12 +382,12 @@
                     <p>Skilled professionals are always ready to provide reliable services to our clients!</p>
                   </article>
                 </div>
-                <div class="row contenedor-producto">
-                  <div class="icono col-2">
+                <div class="sec4-flex">
+                  <div class="icono me-3">
                     <i class="fa-solid fa-globe"></i>
                   </div>
 
-                  <article class="col-10">
+                  <article>
                     <header>
                       <h3>
                         Big Data & Analytics
@@ -395,12 +397,12 @@
                   </article>
                 </div>
 
-                <div class="row contenedor-producto">
-                  <div class="icono col-2">
+                <div class="sec4-flex">
+                  <div class="icono me-3">
                     <i class="fa-solid fa-file-circle-check"></i>
                   </div>
 
-                  <article class="col-10">
+                  <article>
                     <header>
                       <h3>
                         Maintain App Data
@@ -413,6 +415,7 @@
             </div>
           </section>
         </div>
+      </div>
 
         <div class="container">
           <section class="row section6">
@@ -479,6 +482,7 @@
           </section>
         </div>
 
+        <div class="container">
         <div class="row">
           <figure class="col-12 col-md-6">
             <img class="img-fluid" src="assets/img/cnst1.webp" alt="">
@@ -487,7 +491,7 @@
           <section class="col-12 col-md-6 section5 mb-3">
             <h2>Request Free Consultation</h2>
             <article class="col-12">
-              <p>Get in touch and discover how we can help. We aim to be in touch for a consultation</p>
+              <h3 class="form-h3">Get in touch and discover how we can help. We aim to be in touch for a consultation</h3>
 
               <form class="row form-sec7">
                 <div class="col-12 mb-3">
@@ -511,6 +515,7 @@
 
           </section>
         </div>
+      </div>
 
         <div class="row section8">
           <div class="col-12">
@@ -541,6 +546,7 @@
               <article class="col-12">
                 <h3 class="centrar">Check Out Our <span class="span-rojo">Work Process</span></h3>
               </article>
+
 
               <div class="row">
                 <div class="col-12 col-md-6 col-lg-3 centrar">
@@ -588,22 +594,22 @@
     <footer class="bg-black">
       <div class="container">
           <div class="row justify-content-center">
-              <div class="col-lg-4 col-md-6">
+              <div class="col-12 col-lg-4 col-md-12">
                   <h2 class="fs-1 text-primary">ITSOFT.</h2>
                   <p class="small text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
                   <p class="small text-light mb-0">&copy; Copyrights. All rights reserved. <span class="text-danger">ARATH ABELLO</span>></p>
               </div>
-              <div class="col-lg-2 col-md-6">
+              <div class="col-12 col-lg-2 col-md-6">
                   <h2 class="fs-3 mb-3 text-primary">Languages</h2>
                   <ul class="list-unstyled">
-                      <li><a href="#">HTML</a></li>
-                      <li><a href="#">CSS</a></li>
-                      <li><a href="#">Bootstrap</a></li>
-                      <li><a href="#">Sass</a></li>
-                      <li><a href="#">JAVASCRIPT</a></li>
+                      <li><p class="text-primary">HTML</p></li>
+                      <li><p class="text-primary">CSS</p></li>
+                      <li><p class="text-primary">Bootstrap</p></li>
+                      <li><p class="text-primary">Sass</p></li>
+                      <li><p class="text-primary">JAVASCRIPT</p></li>
                   </ul>
               </div>
-              <div class="col-lg-4 col-md-6">
+              <div class="col-12 col-lg-4 col-md-6">
                   <h2 class="fs-3 mb-3 text-primary">Newsletter</h2>
                   <p class="small text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
                   <form action="#">
