--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
               <div class="col-12 col-lg-4 col-md-12">
                   <h2 class="fs-1 text-primary">ITSOFT.</h2>
                   <p class="small text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                  <p class="small text-light mb-0">&copy; Copyrights. All rights reserved. <span class="text-danger">ARATH ABELLO</span>></p>
+                  <p class="small text-light mb-0">&copy; Copyrights. All rights reserved. <span class="text-danger">ARATH ABELLO</span></p>
               </div>
               <div class="col-12 col-lg-2 col-md-6">
                   <h2 class="fs-3 mb-3 text-primary">Languages</h2>
