actualizacion de boton navbar search

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </ul>
               <form class="d-flex form-nav">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="search btn" type="submit">Search</button>
+                <button class="search btn btn-danger" type="submit">Search</button>
               </form>
             </div>
           </div>
